fixed wrapping issue

--- a/src/styles/jaunProjects.scss
+++ b/src/styles/jaunProjects.scss
@@ -35,7 +35,7 @@ body {
       color: white;
       text-align: center;
 
-      .subtitle {
+      .title {
         font-family: $font-family-secondary;
         font-size: 2.2rem;
         line-height: 1.2em;
@@ -44,15 +44,17 @@ body {
         letter-spacing: 3px;
         color: rgba(255,255,255,0.5);
         margin-bottom: 5px;
+        letter-spacing: 3px;
       }
 
-      .title {
+      .subtitle {
         font-family: $font-family-primary;
-        font-size: 3rem;
+        font-size: 2rem;
         line-height: 1.2em;
-        text-transform: uppercase;
-        letter-spacing: 3px;
-        margin-bottom: 40px;
+        text-wrap: break-word;
+        max-width: 80vw;
+        margin: auto;
+        margin-bottom: 1rem;
       }
       .btn{
         border: 1px solid #fff;
